--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,12 @@
     <title>Page title</title>
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <include src="./partials/search-form.html"></include>
+    <div class="gallery"></div>
+    <button type="button" class="load-more">Load more</button>
   </body>
 </html>
