--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,16 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/search-form.html"></include>
+    
+    <!-- <form class="search-form" id="search-form">
+      <input
+        type="text"
+        name="searchQuery"
+        autocomplete="off"
+        placeholder="Search images..."
+      /> -->
+      <button type="submit">Search</button>
+    </form>
     <div class="gallery"></div>
     <button type="button" class="load-more">Load more</button>
   </body>
